# cashu-wallet-cli-tools

./: README.md  pyproject.toml
cli/: main.py
